# Churn-classification-CICD-proj

./: .gitignore  README.md  Taskfile.yml  main.ipynb  main.py  pyproject.toml
config/: bitcoin_ingest.json
orchestration/: run.py
src/: train.py
src/MLOps/: registry.py
src/MLOps_service/: __init__.py  tracking.py
src/api/: __init__.py  app.py
src/data_ingestion_service/: clients.py  config.py  reader.py  schema.py  singletons.py  storage.py
src/feature_delivery_service/: __init__.py  etl.py  ingestion.py  one.py  reader.py
src/feature_delivery_service/tools/: binance_client.py  candle_dataclasses.py  config.py  duckdb_storage_manager.py  schemas.py  singletons.py  storage.py
src/feature_engineering/: __init__.py  clients.py  features.py  ingestion.py  reader.py  storage.py
src/ml/: training.py
src/model_training_service/: __init__.py  training.py
src/orchestration/: tracking.py
src/reporting/: __init__.py  ingestion_report.py  report_maker.py
