[project]
name = "mlflow-project"
version = "0.1.0"
description = "Housing prices mlflow project"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scikit-learn",
    "xgboost",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
