[project]
name = "ML-cycle-bitcoin-sandbox"
version = "0.1.0"
description = "Showcasing the full ML cycle using bitcoin trading data."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "mlflow",
    "xgboost",
    "feast",
    "duckdb",
    "reportlab",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
